Improve test coverage of LocationEntity class